Add ControlPersist to optimize multi access

--- a/.ssh/assh.d/def.yml
+++ b/.ssh/assh.d/def.yml
@@ -1,6 +1,7 @@
 defaults:
   ControlMaster: auto
   ControlPath: ~/.ssh/master-%C
+  ControlPersist: 600
   ServerAliveInterval: 60
   SendEnv: LANG LC_*
   Hooks:
