--- a/.ssh/assh.yml
+++ b/.ssh/assh.yml
@@ -13,6 +13,8 @@ templates:
     StrictHostKeyChecking: no
     UserKnownHostsFile: /dev/null
     LogLevel: QUIET
+    PubkeyAcceptedKeyTypes: +ssh-rsa
+    HostKeyAlgorithms: +ssh-rsa
 
 includes:
 - ~/.ssh/assh.d/*.yml
