Add linux general template
Enable x11 forwarding as default to adjust for Neovim.

--- a/.ssh/assh.yml
+++ b/.ssh/assh.yml
@@ -1,13 +1,18 @@
 hosts:
   duke.*:
     Hostname: "%h.duke.fyi"
-    User: wdl
+    Inherits: general-host
 
   ip.*.*:
     ResolveCommand: /bin/sh -c "echo %h|sed s/^ip./192.168./"
     Inherits: dynamic-host
 
 templates:
+  general-host:
+    User: wdl
+    ForwardX11: true
+    ForwardX11Trusted: true
+    
   dynamic-host:
     User: root
     StrictHostKeyChecking: no
