Enable x11 forwarding as default

--- a/.ssh/assh.yml
+++ b/.ssh/assh.yml
@@ -1,4 +1,7 @@
 hosts:
+  duke.*.duke.fyi:
+    Inherits: general-host
+
   duke.*:
     Hostname: "%h.duke.fyi"
     Inherits: general-host
@@ -12,7 +15,7 @@ templates:
     User: wdl
     ForwardX11: true
     ForwardX11Trusted: true
-    
+
   dynamic-host:
     User: root
     StrictHostKeyChecking: no
