--- a/.ssh/assh.d/def.yml
+++ b/.ssh/assh.d/def.yml
@@ -3,6 +3,8 @@ defaults:
   ControlPath: ~/.ssh/master-%C
   ControlPersist: 600
   ServerAliveInterval: 60
+  ForwardX11: true
+  ForwardX11Trusted: true
   SendEnv: LANG LC_*
   Hooks:
     # Automatically backup ~/.ssh/config
